2010-08-20  Adam Endrodi <adam.endrodi@blumsoft.eu>

	NB#186852 .desktop file in ~/.local/share/applications/hildon
		  not used for shortcut list

	* src/Makefile.am:
	  Added directory definition.
	* src/hd-shortcut-widgets.c (hd_shortcut_widgets_get):
	  Scan that directory as well.

2010-07-29  Adam Endrodi <adam.endrodi@blumsoft.eu>

	NB#165381 Hildon-home is not responding if theme is changed
	          when all shortcuts are added to home view.

	We were super-busy restyling widgets when the theme was changed
	and couldn't respond to the window manager in time.  This task
	not only takes ages but also unnecessary because we exit anyway
	to prevent memory leaks.

	* hildon-home.c:
	  Make gtk ignore _GTK_READ_RCFILES completely.
	* hd-cairo-surface-cache.c:
	  Don't monitor the theme link and don't react to its changes.
	* hd-task-shortcut.c
	* hd-bookmark-shortcut.c
	* hd-incoming-event-window.c:
	  Don't react to theme change.

2010-07-29  Adam Endrodi <adam.endrodi@blumsoft.eu>

	Add as tight D-BUS message matches as possible.

	* src/hd-hildon-home-dbus.c
	* src/hd-incoming-events.c:
	  Use dbus_message_get_args() rather than iterators.

2010-07-29  Adam Endrodi <adam.endrodi@blumsoft.eu>

	Don't run waitidle if we exited because of a theme change.

	* src/hildon-home.c (main):
	  Rename the stamp file and check for it too on startup
	  when deciding about enabling waitidle.

2010-07-29  Adam Endrodi <adam.endrodi@blumsoft.eu>

	Make waitidle compatible with libhildondesktop 2.1.42,
	and disable it by default.  This allows for independent
	releasing of hildon-home with the waitidle feature and
	libhildondesktop with the necessary enablers.

	* src/hildon-home.c:
	  Recognize the Waitidle::enabled configuration parameter.
	* src/home.conf.in:
	  Move comments around.
	* src/hd-task-shortcut.c (hd_task_shortcut_desktop_file_changed_cb):
	  Check the existence of the "throttled" property before getting
	  its value to prevent the emission of warnings.
