@@ -1,3 +1,13 @@
+2011-05-06  pk <paiburio-m@yahoo.com>
+
+	Ability to hide the background of task-shortcuts
+	
+	with boolean gconf-key 
+	/apps/osso/hildon-home/task-shortcuts-hide-bg
+	
+	Based on the patch submitted in 
+	https://bugs.maemo.org/show_bug.cgi?id=11990
+
 2010-08-20  Adam Endrodi <adam.endrodi@blumsoft.eu>
 
 	NB#186852 .desktop file in ~/.local/share/applications/hildon
